[tool.poetry]
name = "crawl-caster"
version = "0.0.1"
description = "Try web-scrapping, web-crawling and content aggregation."
authors = ["yoinezero <yoinezero.a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
aiohttp = "^3.8.4"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
